--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,11 +29,11 @@ security:
                                 google:        "/login/check-google"
                                 facebook:        "/login/check-facebook"
                                 bitbucket:        "/login/check-bitbucket"
-                            login_path:        /
-                            failure_path:      /signin
-
+                            login_path:        /signIn
+                            failure_path:      /signIn
                             oauth_user_provider:
                                 service:  thumbtackoffliner.oauth_user_provider
+                            default_target_path: /
             logout:
                 path:   /logout
                 target: /
