--- a/src/Thumbtack/OfflinerBundle/Resources/config/routing.yml
+++ b/src/Thumbtack/OfflinerBundle/Resources/config/routing.yml
@@ -4,6 +4,9 @@ thumbtackOffliner_root:
 thumbtackOffliner_offliner:
     resource: "@ThumbtackOfflinerBundle/Controller/OfflinerController.php"
     type:     annotation
+thumbtackOffliner_searcher:
+    resource: "@ThumbtackOfflinerBundle/Controller/SearchController.php"
+    type:     annotation
 thumbtackOffliner_oauth:
     resource: "@ThumbtackOfflinerBundle/Security/UserProvider.php"
     type:     annotation
