--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "jms/serializer": "0.13.0",
         "knplabs/knp-snappy-bundle": "dev-master",
         "hwi/oauth-bundle": "0.3.*@dev",
+        "friendsofsymfony/elastica-bundle": "3.0.*@dev",
         "xplk/phantomCrawl":"0.0.3"
     },
     "repositories": [
