--- a/src/Thumbtack/OfflinerBundle/Resources/config/services.yml
+++ b/src/Thumbtack/OfflinerBundle/Resources/config/services.yml
@@ -24,4 +24,4 @@ services:
         arguments: [@security.context,@doctrine]
  thumbtackServiceProcessor:
         class: Thumbtack\OfflinerBundle\Models\ServiceProcessor
-        arguments: ["@doctrine","%offliner_max_proccess_count%","@fos_elastica.index.pages.page"]
+        arguments: ["@doctrine","%offliner_max_proccess_count%"]
