--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -15,3 +15,4 @@ parameters:
     secret:            ThisTokenIsNotSoSecretChangeIt
 
     offliner_max_proccess_count: 2
+    uploads_dir: /home/offliner_uploads/
