--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -42,8 +42,9 @@ security:
         - { path: ^/connect, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/uploads, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/preview, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY  }
         - { path: ^/$, roles: IS_AUTHENTICATED_FULLY  }
         - { path: ^/stat$, roles: IS_AUTHENTICATED_FULLY  }
         - { path: ^/tasks, roles: IS_AUTHENTICATED_FULLY  }
         - { path: ^/domains, roles: IS_AUTHENTICATED_FULLY  }
-        - { path: ^/search, roles: IS_AUTHENTICATED_FULLY  }
+        - { path: ^/search$, roles: IS_AUTHENTICATED_FULLY  }
